@@ -8,8 +8,8 @@ Authors@R: c(
         person("Vladimir", "Kiselev", role=c("ctb"), email="vk6@sanger.ac.uk"),
         person("Felix G.M.", "Ernst", role=c("ctb"), email="felix.gm.ernst@outlook.com"),
         person("Alan", "O'Callaghan", role=c("ctb", "cre"), email="alan.ocallaghan@outlook.com"))
-Version: 1.23.0
-Date: 2021-10-08
+Version: 1.23.1
+Date: 2021-11-01
 License: GPL-3
 Title: Single-Cell Analysis Toolkit for Gene Expression Data in R
 Description: A collection of tools for doing various analyses of
@@ -45,7 +45,6 @@ Suggests:
     BiocStyle,
     biomaRt,
     cowplot,
-    destiny,
     knitr,
     scRNAseq,
     robustbase,
